# talon

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
build-tool/: Cargo.toml
build-tool/src/: cache.rs  commands.rs  directory.rs  main.rs
headers/: .clang-format  .clangd
headers/talon/: talon.hpp
headers/talon/details/: blueprints.hpp  build_options.hpp  builder.hpp  helpers.hpp  workspace.hpp
installer/: Cargo.toml
installer/src/: main.rs
